# ArduinoBot

./: README.md  clean.sh
src/arduinobot_bringup/: CMakeLists.txt  package.xml
src/arduinobot_bringup/launch/: complete.launch  sim_complete.launch
src/arduinobot_controller/: CMakeLists.txt  package.xml
src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.h
src/arduinobot_controller/launch/: controller.launch
src/arduinobot_controller/src/: angles_converter.cpp  arduinobot_interface.cpp
src/arduinobot_controller/srv/: AnglesConverter.srv
src/arduinobot_description/: CMakeLists.txt  package.xml
src/arduinobot_description/launch/: display.launch  gazebo.launch
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_description/urdf/: arduinobot.urdf.xacro
src/arduinobot_moveit/: .setup_assistant  package.xml
src/arduinobot_moveit/config/: kinematics.yaml
src/arduinobot_moveit/launch/: move_group.launch  moveit_rviz.launch
src/arduinobot_remote/: CMakeLists.txt  package.xml
src/arduinobot_remote/launch/: remote_interface.launch
src/arduinobot_remote/scripts/: alexa_interface.py  task_server.py
src/arduinobot_remote/src/: task_server.cpp
