<?xml version="1.0"?>
<package format="2">
  <name>arduinobot_bringup</name>
  <version>0.0.0</version>
  <description>The arduinobot_bringup package</description>

  <maintainer email="pernilla@todo.todo">pernilla</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>