<?xml version="1.0"?>
<package format="2">
  <name>arduinobot_description</name>
  <version>0.0.0</version>
  <description>The arduinobot_description package</description>

  <maintainer email="pernilla.xx@gmail.com">Pernilla Wikstrom</maintainer>

  <license>BSD</license>

  <author email="pernilla.xx@gmail.com">Pernilla Wikstrom</author>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>